# vec-c-

./: .clang-format  CMakeLists.txt
src/: CMakeLists.txt  vec.h
test/: CMakeLists.txt  TestSimple.cpp  TestVector.cpp
